--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -66,8 +66,9 @@
   }
   .image3{
   
-    height: 55%;
-    width: 55%;
+    height: 75%;
+    width: 75%;
+    margin-right: 8%;
   }
   .subtitle-delegacion{
     font-size: 25px;
