--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -60,12 +60,10 @@
     
   }
   .image2{
-  
-    height: 130%;
-    width: 130%;
+    height: 45%;
+    width: 45%;
   }
   .image3{
-  
     height: 75%;
     width: 75%;
     margin-right: 8%;
@@ -88,4 +86,24 @@
     border-radius: 0.02px;
     border-color: red;
 
+  }
+  .icon-toolbar{
+    margin-left: -22%;
+    width: 90px;
+    height: 90px;
+  }
+  .icon-toolbar2{
+    margin-right: -20%;
+    width: 80px;
+    height: 80px;
+  }
+  .tolbar{
+    display: flex;
+    align-items:center;
+  }
+  .tolbar-text{
+    font-size: 25px;
+  }
+  .margin-15px{
+    margin-top: 25px;
   }
