--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -80,6 +80,9 @@
     width: 100%;
     margin-bottom:30px ;
   }
+  .margin-Section{
+    margin-top: 50px;
+  }
   .section-text{
     font-size: 28px;
   }
@@ -143,4 +146,16 @@
     margin-left: 17px;
     margin-top: 10%;
     align-items: center;
+  }
+
+  .card-bodyText{
+    color: red;
+    font-size: 16px;
+    margin-top: 20px;
+  }
+
+  .card-bodyText2{
+    color: red;
+    font-size: 16px;
+    margin-top: -10px;
   }
