--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -133,7 +133,10 @@
     text-align: center;
   }
   .card-Text{
+    font-weight: 900;
     margin-top: 35%;
+    color: black;
+    font-size: 18px;
   }
 
   .card-imag{
@@ -149,13 +152,28 @@
   }
 
   .card-bodyText{
-    color: red;
-    font-size: 16px;
+    color: black;
+    font-size: 18px;
+    font-weight: 800;
     margin-top: 20px;
+  }
+  .card-bodyText3{
+    color: black;
+    font-size: 18px;
+    font-weight: 800;
+    position:absolute;
+    bottom:10%;
+    left: 4%;
   }
 
   .card-bodyText2{
-    color: red;
-    font-size: 16px;
+    color: black;
+    font-weight: 900;
+    font-size: 18px;
     margin-top: -10px;
+  }
+
+  .prueba-img{
+    width: 583px;
+    height: 300px;
   }
